# amazon-sales-analysis

./: .coverage  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scenario_simulation.py  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  api.py  streamlit_app.py
assets/: custom.css
docs/: README.en.md  README.pt-BR.md
scripts/: run_alerts.py  run_pipeline.py
src/: __init__  data_preprocessing.py
src/amazon_sales_analysis/: __init__.py  analytics.py  business_metrics.py  config.py  data_ingestion.py  data_preprocessing.py  decision_engine.py  eda.py  evaluation.py  feature_engineering.py  insights.py  logging_config.py  metrics.py  modeling.py  quality.py  sales_analysis.py  table_organization.py  validation.py  visualization.py
src/amazon_sales_analysis/cli/: __init__.py  alerts.py  pipeline.py  scenario.py
tests/: conftest.py  test_api.py  test_data_preprocessing.py  test_data_quality.py  test_decision_engine.py  test_eda_visualization.py  test_metrics.py  test_operational_runtime.py  test_sales_analysis.py  test_table_organization.py
