[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-sales-analysis"
version = "1.0.0"
description = "Business-focused sales analytics pipeline with quality gates and executive metrics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "kagglehub>=0.1.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pandera>=0.20.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "httpx>=0.27.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
amazon-sales-pipeline = "amazon_sales_analysis.cli.pipeline:main"
amazon-sales-alerts = "amazon_sales_analysis.cli.alerts:main"
amazon-sales-scenario = "amazon_sales_analysis.cli.scenario:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=src/amazon_sales_analysis --cov-report=term-missing --cov-fail-under=70"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts", "app", "alerts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["amazon_sales_analysis", "app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
exclude = ["^\\.venv/"]
